# MotorSim

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  draw.cpp  draw.h  main.cpp  scene.cpp  scene.h  settings.h
src/tests/: bldc.cpp  magnets.cpp
